--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,4 +15,4 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag christophermca/day_night:$(date +%s)
+      run: docker build . --file Dockerfile --tag christophermca/day_night:latest && docker push christophermca/day_night:latest
